--- a/vanilla-module/index.html
+++ b/vanilla-module/index.html
@@ -1,16 +1,16 @@
-<!doctype html>
-<html lang="en-US">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8" />
     <title>List of Pokémon</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <link rel="modulepreload" href="pokemon-listing.mjs" />
 </head>
 <body>
-    <div class="pokemon"></div>
+    <div id="root"></div>
     <script type="module">
         import PokémonListing from "./pokemon-listing.mjs";
-        PokémonListing(document.querySelector(".pokemon"));
+        PokémonListing(document.querySelector("#pokemon"));
     </script>
 </html>
