Update Vue component

--- a/vue/index.html
+++ b/vue/index.html
@@ -10,8 +10,8 @@
     <div id="root"></div>
     <script type="module">
         import { createApp } from "vue";
-        import App from "./App.vue";
-        createApp(App).mount("#root");
+        import Pokemon from "./Pokemon.vue";
+        createApp(Pokemon).mount("#root");
     </script>
 </body>
 </html>
