feat: better vanilla version

--- a/base.html
+++ b/base.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 <body>
-    <div class="pokemon">
+    <div id="root">
         <h1>List of Pokémon</h1>
         <ul></ul>
         <button disabled>Previous</button>&nbsp;<button>Next</button>
