Rename component and CSS class names according to style guide

--- a/react/index.html
+++ b/react/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>List of Pokémon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
 </head>
 <body>
     <div id="root"></div>
