--- a/vanilla-module/index.html
+++ b/vanilla-module/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8" />
+    <link rel="modulepreload" href="pokemon.mjs" />
+    <link rel="preload" href="https://pokeapi.co/api/v2/pokemon/?limit=10&offset=0" as="fetch" crossorigin="anonymous">
     <title>List of Pokémon</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <link rel="modulepreload" href="pokemon-listing.mjs" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
 </head>
 <body>
     <div id="root"></div>
     <script type="module">
-        import PokémonListing from "./pokemon-listing.mjs";
-        PokémonListing(document.getElementById("root"));
+        import Pokemon from "./pokemon.mjs";
+        Pokemon(document.getElementById("root"));
     </script>
 </html>
