complete basic implementation

--- a/vue/index.html
+++ b/vue/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <link rel="preload" href="https://pokeapi.co/api/v2/pokemon/?limit=10&offset=0" as="fetch" crossorigin="anonymous">
     <title>List of Pokémon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
 </head>
 <body>
     <div id="root"></div>
