--- a/solid/index.html
+++ b/solid/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="index.jsx" type="module"></script>
+    <script src="./index.jsx" type="module"></script>
 </body>
 </html>
