--- a/svelte/index.html
+++ b/svelte/index.html
@@ -7,9 +7,10 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
 </head>
 <body>
-    <div id="root" class="pokemon">
-        <h1>List of Pokémon</h1>
-        <ul></ul>
-        <button disabled>Previous</button>&nbsp;<button>Next</button>
-    </div>
+    <div id="root"></div>
+    <script type="module">
+        import Pokemon from './Pokemon.svelte';
+        new Pokemon({ target: document.getElementById('root') });
+    </script>
+</body>
 </html>
