chore: update dependencies

--- a/react/index.html
+++ b/react/index.html
@@ -10,13 +10,11 @@
     <div id="root"></div>
     <script type="module">
         import React from "react";
-        import ReactDOM from "react-dom";
+        import { createRoot } from 'react-dom/client';
         import Pokemon from "./Pokemon";
-
-        ReactDOM.render(
-            React.createElement(Pokemon),
-            document.getElementById("root")
-        );
+        
+        const root = createRoot(document.getElementById('root'));
+        root.render(React.createElement(Pokemon));
     </script>
 </body>
 </html>
